Fix menu collapsed behavior

--- a/source/assets/stylesheets/scss/components/_tag.scss
+++ b/source/assets/stylesheets/scss/components/_tag.scss
@@ -15,7 +15,7 @@
     }
   }
 
-  .ch-nav.collapsed:not(:hover) & {
+  .ch-nav.collapsed:not(.hover) & {
     &--new {
       &.ui.label {
         position: absolute;
