--- a/source/assets/stylesheets/scss/layout/_nav.scss
+++ b/source/assets/stylesheets/scss/layout/_nav.scss
@@ -26,7 +26,7 @@
     }
   }
 
-  &.collapsed:hover {
+  &.collapsed.hover {
     width: $navbarSize;
     box-shadow: 0 0 25px rgba(#000, .54);
 
@@ -47,7 +47,7 @@
       top: auto;
       bottom: 0;
 
-      &.collapsed:hover {
+      &.collapsed.hover {
         .ch-logo-label,
         .ch-menu-item-label,
         .ch-collapse-button-label,
@@ -62,7 +62,7 @@
     }
 
     &.collapsed,
-    &.collapsed:hover {
+    &.collapsed.hover {
       box-shadow: none;
       transition: none;
     }
